--- a/projets.html
+++ b/projets.html
@@ -9,7 +9,7 @@
 		<title>Game Group Toulouse</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/Semantic-UI-CSS/semantic.css" />
+		<link rel="stylesheet" href="assets/css/semantic.min.css" />
 		<link rel="shortcut icon" href="images/groupgame.ico">
 	</head>
 
@@ -92,7 +92,7 @@
 		</div>
 
 		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/css/Semantic-UI-CSS/semantic.min.js"></script>></s>
+		<script src="assets/js/semantic.min.js"></script>></s>
 		<script src="assets/js/skel.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
