workshop2 dl link

--- a/workshop1.html
+++ b/workshop1.html
@@ -60,8 +60,7 @@
 						<div class="ui teal piled segment">
 							<p> Création d'un mini-jeu en 3 dimensions.</br>
 								Le principe: Une tourelle controllée par le joueur qui tire sur des objets statiques.</p>
-							<a href ="http://devassets.com/assets/tower-defense-assets">Tourelle asset download</a>
-							
+							<a href ="https://github.com/game-group-toulouse/workshop_02">Workhop 02 complet télécharger</a>
 						</div>
 						<!--<div class="ui teal piled segment">
 							<h3 class="ui header">Workshop n°3</h3>
