--- a/unity-workshops.html
+++ b/unity-workshops.html
@@ -61,13 +61,20 @@
 							<h3 class="ui header">Workshop n°1</h3>
 							<p> Installation des outils nécessaires au développement sur Unity</br>
 								Découverte de l'interface d'Unity et des éléments de base.</p>
-							<button class="ui button">Voir l'activité</button>
+							<!--<button class="ui button">Voir l'activité</button>-->
 						</div>
 						<div class="ui teal piled segment">
 							<h3 class="ui header">Workshop n°2</h3>
 							<p> Création d'un mini-jeu en 3 dimensions.</br>
 								Le principe: Une tourelle controllée par le joueur qui tire sur des objets statiques.</p>
-							<button class="ui button" onclick="goOn('./workshop1.html')">Voir l'activité</button>
+							<!--<button class="ui button" onclick="goOn('./workshop1.html')">Voir l'activité</button>-->
+							<a href ="https://github.com/game-group-toulouse/workshop_02">Workhop 02 complet télécharger</a>
+						</div>
+						<div class="ui teal piled segment">
+							<h3 class="ui header">Workshop n°3</h3>
+							<p> Intégration d'une vue FPS.</p>
+							<!--<button class="ui button" onclick="goOn('./workshop2.html')">Voir l'activité</button>-->
+							<a href ="https://github.com/game-group-toulouse/workshop_03">Workhop 02 complet télécharger</a>
 						</div>
 						<!--<div class="ui teal piled segment">
 							<h3 class="ui header">Workshop n°3</h3>
